# HiggsTTS.cpp

./: .gitignore  CMakeLists.txt  README.md
CSharpBinding/HiggsTTS.net/HiggsTTSGUI/: HiggsTTSGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
ggml/src/ggml-cpu/: ops.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: im2col_rafa.comp  snake_1d.comp  vulkan-shaders-gen.cpp
python_gui/: simple_tts_gui.py
src/: higgs_BAR.cpp  higgs_BAR.h  higgs_c_api.cpp  higgs_cli.cpp  higgs_server.cpp  higgs_tts.cpp  tokenizer_helper.cpp
src/core/: hf_tokenizer.cpp
usage_example/: simple_tts_gui.py
